--- a/index.html
+++ b/index.html
@@ -73,12 +73,8 @@
           <ul class="features-list list">
             <li class="features-item">
               <div class="icon">
-                <svg class="icon-item">
-                  <use
-                    href="./images/symbol-defs.svg#icon-antenna"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="icon-item" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-title title-text">Strategy</h3>
@@ -89,12 +85,8 @@
             </li>
             <li class="features-item">
               <div class="icon">
-                <svg class="icon-item">
-                  <use
-                    href="./images/symbol-defs.svg#icon-clock"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="icon-item" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-title title-text">Punctuality</h3>
@@ -105,12 +97,8 @@
             </li>
             <li class="features-item">
               <div class="icon">
-                <svg class="icon-item">
-                  <use
-                    href="./images/symbol-defs.svg#icon-diagram"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="icon-item" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-title title-text">Diligence</h3>
@@ -121,12 +109,8 @@
             </li>
             <li class="features-item">
               <div class="icon">
-                <svg class="icon-item">
-                  <use
-                    href="./images/symbol-defs.svg#icon-astronaut"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="icon-item" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-title title-text">Technologies</h3>
@@ -377,123 +361,105 @@
           </ul>
         </div>
       </section>
-    </main>
-    <!--section-customers-->
-    <h2 class="customers">Customers</h2>
-    <ul class="customers-item">
-      <li class="customers-link">
-        <a class="team-soc-link link" href="">
-          <svg>
-            <use
-              href="./images/symbol-defs.svg#icon-logo"
-              Width="104"
-              Height="56"
-            ></use>
-          </svg>
-        </a>
-      </li>
-      <li class="customers-link">
-        <a class="customers-item-link" href="">
-          <svg>
-            <use
-              href="./images/symbol-defs.svg#icon-logo-1"
-              Width="104"
-              Height="56"
-            ></use>
-          </svg>
-        </a>
-      </li>
-      <li class="customers-link">
-        <a class="customers-item-link" href="">
-          <svg>
-            <use
-              href="./images/symbol-defs.svg#icon-logo-2"
-              Width="104"
-              Height="56"
-            ></use>
-          </svg>
-        </a>
-      </li>
-      <li class="customers-link">
-        <a class="customers-item-link" href="">
-          <svg>
-            <use
-              href="./images/symbol-defs.svg#icon-logo-3"
-              Width="104"
-              Height="56"
-            ></use>
-          </svg>
-        </a>
-      </li>
-      <li class="customers-link">
-        <a class="customers-item-link" href="">
-          <svg>
-            <use
-              href="./images/symbol-defs.svg#icon-logo-4"
-              Width="104"
-              Height="56"
-            ></use>
-          </svg>
-        </a>
-      </li>
-      <li class="customers-link">
-        <a class="customers-item-link" href="">
-          <svg>
-            <use
-              href="./images/symbol-defs.svg#icon-logo-5"
-              Width="104"
-              Height="56"
-            ></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
 
+      <!--section-customers-->
+      <section class="customers-icon">
+        <div class="container">
+          <h2 class="customers">Customers</h2>
+          <ul class="customers-item list">
+            <li class="customers-link">
+              <a class="customers-item-link" href="">
+                <svg class="customers-btn" Width="104" Height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-link">
+              <a class="customers-item-link" href="">
+                <svg class="customers-btn" Width="104" Height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-link">
+              <a class="customers-item-link" href="">
+                <svg class="customers-btn" Width="104" Height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-link">
+              <a class="customers-item-link" href="">
+                <svg class="customers-btn" Width="104" Height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-link">
+              <a class="customers-item-link" href="">
+                <svg class="customers-btn" Width="104" Height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-link">
+              <a class="customers-item-link" href="">
+                <svg class="customers-btn" Width="104" Height="56">
+                  <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <!--section-footer-->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo-web link"
-          >WEB
-          <span class="footer-logo-studio link">Studio</span>
-        </a>
+      <div class="container container-footer">
+        <div>
+          <a href="./index.html" class="footer-logo-web link"
+            >WEB
+            <span class="footer-logo-studio link">Studio</span>
+          </a>
 
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div>
-        <h3 class="social">Social media</h3>
-        <ul class="social-item">
-          <li class="social-link">
-            <a class="social-link-item link" href="">
-              <svg width="20" height="20" class="media-link">
-                <use href="./images/symbol-defs.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-link">
-            <a class="social-link-item link" href="">
-              <svg width="20" height="20" class="media-link">
-                <use href="./images/symbol-defs.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-link">
-            <a class="social-link-item link" href="">
-              <svg width="20" height="20" class="media-link">
-                <use href="./images/symbol-defs.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-link">
-            <a class="social-link-item link" href="">
-              <svg width="20" height="20" class="media-link">
-                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <h3 class="social">Social media</h3>
+          <ul class="social-item list">
+            <li class="social-link link">
+              <a class="social-link-item" href="">
+                <svg width="24" height="24" class="media-link">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link link">
+              <a class="social-link-item" href="">
+                <svg width="24" height="24" class="media-link">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link link">
+              <a class="social-link-item" href="">
+                <svg width="24" height="24" class="media-link">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link link">
+              <a class="social-link-item" href="">
+                <svg width="24" height="24" class="media-link">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
