--- a/portfolio.html
+++ b/portfolio.html
@@ -235,16 +235,52 @@
     </main>
 
     <!--section2-->
-    <footer class="section footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo-web link"
-          >WEB
-          <span class="footer-logo-studio link">STUDIO</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+    <footer class="footer">
+      <div class="container container-footer">
+        <div>
+          <a href="./index.html" class="footer-logo-web link"
+            >WEB
+            <span class="footer-logo-studio link">Studio</span>
+          </a>
+
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <h3 class="social">Social media</h3>
+          <ul class="social-item list">
+            <li class="social-link link">
+              <a class="social-link-item" href="">
+                <svg width="24" height="24" class="media-link">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link link">
+              <a class="social-link-item" href="">
+                <svg width="24" height="24" class="media-link">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link link">
+              <a class="social-link-item" href="">
+                <svg width="24" height="24" class="media-link">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link link">
+              <a class="social-link-item" href="">
+                <svg width="24" height="24" class="media-link">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
